# dev_monorepo

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  requirements.in  requirements_lock_3_12.txt
env_setup/: BUILD  main.cpp
hello_triangle/: BUILD  main.cc
hello_triangle/shaders/: BUILD  shader.frag  shader.vert
learn_opengl/: BUILD  camera.h  main.cc  mesh.h  model.h
learn_opengl/models/: BUILD
learn_opengl/models/ant/: BUILD  ant.mtl
learn_opengl/models/backpack/: BUILD
learn_opengl/shaders/: BUILD  explode_geometry_shader.glsl  light_shader.vert  normals_geometry_shader.glsl  normals_shader.vert  shader.frag  shader.h  shader.vert
learn_opengl/textures/: BUILD
learn_opengl_advanced/: BUILD  main.cc
learn_opengl_advanced/shaders/: 1.1.depth_testing.frag  1.1.depth_testing.vert  1.3.simple_shader.frag  1.4.skybox_shader.vert  BUILD
learn_opengl_advanced/textures/: BUILD
learn_opengl_breakout/: BUILD  game.cc  game.h  game_level.cc  game_level.h  game_object.cc  game_object.h  main.cc  resource_manager.cc  resource_manager.h  sprite_renderer.cc  sprite_renderer.h
learn_opengl_breakout/levels/: BUILD
learn_opengl_instanced_rendering/: BUILD  main.cc
learn_opengl_instanced_rendering/models/: BUILD
learn_opengl_instanced_rendering/models/planet/: BUILD
learn_opengl_instanced_rendering/models/rock/: BUILD
learn_opengl_instanced_rendering/shaders/: BUILD  instance_shader.vert  shader.frag  shader.vert
learn_opengl_normalmaps/: BUILD  main.cc
learn_opengl_normalmaps/models/: BUILD
learn_opengl_normalmaps/models/cyborg/: BUILD
learn_opengl_normalmaps/models/nanosuit/: BUILD
learn_opengl_normalmaps/shaders/: shader.frag  shader.vert
learn_opengl_normalmaps/textures/: BUILD
learn_opengl_utils/: BUILD  camera.h  mesh.h  model.h  shader.h  texture.h
logo_automation/: BUILD  local_paths.py  logo_automation.py
logo_automation/assets/: BUILD
utils/files/: BUILD  executable_path.h  file_reader.cc  file_reader.h
utils/files/test/: BUILD  file_reader_unittest.cc
utils/local_paths/: BUILD  executable_path.h  local_paths.cc  local_paths.h
