module(
    name="dev_vulkan",
    repo_name="me_aeed_dev_vulkan"
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "1.0.0")

register_toolchains()

# load vulkan
vulkan_module = use_extension("//third_party/vulkan:extensions.bzl", "vulkan_module")
use_repo(vulkan_module, "vulkan_windows")
use_repo(vulkan_module, "vulkan_linux")
use_repo(vulkan_module, "vulkan_macos")
use_repo(vulkan_module, "vulkan_android")

# register glsl toolchains
register_toolchains(
    "//third_party/glsl:glsl_windows_toolchain",
    "//third_party/glsl:glsl_linux_toolchain",
    "//third_party/glsl:glsl_macos_toolchain",
)

# load glm
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

GLM_VERSION = "1.0.1"

http_archive(
    name = "glm",
    build_file = "//third_party/glm:glm.bzl",
    sha256 = "09C5716296787E1F7FCB87B1CBDBF26814EC1288ED6259CCD30D5D9795809FA5",
    strip_prefix = "glm-{}".format(GLM_VERSION),
    urls = ["https://github.com/g-truc/glm/archive/{}.zip".format(GLM_VERSION)],
)

# load glfw
GLFW_VERSION = "3.3.5"

http_archive(
    name = "glfw",
    build_file = "//third_party/glfw:glfw.bzl",
    sha256 = "a89bb6074bc12bc12fcd322dcf848af81b679ccdc695f70b29ca8a9aa066684b",
    strip_prefix = "glfw-{}".format(GLFW_VERSION),
    urls = ["https://github.com/glfw/glfw/archive/{}.zip".format(GLFW_VERSION)],
)