module(
    name = "dev_monorepo",
    repo_name = "me_aeed_dev_monorepo",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "gtest")

register_toolchains()

# load vulkan
vulkan_module = use_extension("//third_party/vulkan:extensions.bzl", "vulkan_module")
use_repo(vulkan_module, "vulkan_windows")
use_repo(vulkan_module, "vulkan_linux")
use_repo(vulkan_module, "vulkan_macos")
use_repo(vulkan_module, "vulkan_android")

# register glsl toolchains
register_toolchains("//third_party/glsl:glsl_all_platforms_toolchain")

# load glm
bazel_dep(name = "glm", version = "1.0.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# load glfw
GLFW_VERSION = "3.3.5"

http_archive(
    name = "glfw",
    build_file = "//third_party/glfw:glfw.bzl",
    sha256 = "a89bb6074bc12bc12fcd322dcf848af81b679ccdc695f70b29ca8a9aa066684b",
    strip_prefix = "glfw-{}".format(GLFW_VERSION),
    urls = ["https://github.com/glfw/glfw/archive/{}.zip".format(GLFW_VERSION)],
)
